src/corelib/statemachine/qstatemachine.cpp
@@ -252,8 +252,8 @@ static int indexOfDescendant(QState *s, QAbstractState *desc)
 bool QStateMachinePrivate::stateEntryLessThan(QAbstractState *s1, QAbstractState *s2)
 {
     if (s1->parent() == s2->parent()) {
-        return s1->children().indexOf(s1)
-            < s2->children().indexOf(s2);
+        return s1->parent()->children().indexOf(s1)
+            < s2->parent()->children().indexOf(s2);
     } else if (isDescendantOf(s1, s2)) {
         return false;
     } else if (isDescendantOf(s2, s1)) {
@@ -270,8 +270,8 @@ bool QStateMachinePrivate::stateEntryLessThan(QAbstractState *s1, QAbstractState
 bool QStateMachinePrivate::stateExitLessThan(QAbstractState *s1, QAbstractState *s2)
 {
     if (s1->parent() == s2->parent()) {
-        return s1->children().indexOf(s1)
-            < s2->children().indexOf(s2);
+        return s1->parent()->children().indexOf(s1)
+            < s2->parent()->children().indexOf(s2);
     } else if (isDescendantOf(s1, s2)) {
         return true;
     } else if (isDescendantOf(s2, s1)) {
